add Readline-sync package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "[![Actions Status](https://github.com/Peredery/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/Peredery/frontend-project-lvl1/actions)",
   "main": "index.js",
   "bin": {
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/Peredery/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/Peredery/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/Peredery/frontend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
