--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "type": "module",
   "version": "0.0.2",
   "description": "[![Actions Status](https://github.com/Peredery/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/Peredery/frontend-project-lvl1/actions)",
-  "main": "bin/brain-games.js",
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
     "brain-gcd": "bin/brain-gcd.js",
-    "brain-progression": "bin/brain-progression.js"
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
